# osmos

./: .gitignore  Cargo.toml  README.md
osmos-cli/: Cargo.toml
osmos-cli/src/: main.rs
osmos-core/: Cargo.toml
osmos-core/src/: cell.rs  lib.rs  sensor.rs  world.rs
osmos-core/src/system/: collision.rs  mod.rs  movement.rs  network.rs  sensor.rs
osmos-ga/: Cargo.toml
osmos-ga/src/: crossover.rs  evolve.rs  gene.rs  lib.rs  mutation.rs  selection.rs
osmos-nn/: Cargo.toml
osmos-nn/src/: layer.rs  lib.rs  network.rs  neuron.rs
osmos-nn/tests/: layer_test.rs  network_test.rs  neuron_test.rs
osmos-sim/: Cargo.toml
osmos-sim/src/: lib.rs  object.rs  object_ga.rs  simulator.rs  statistics.rs
osmos-sim/src/ga/: crossover.rs  evolve.rs  fitness.rs  gene.rs  mod.rs  mutation.rs  selection.rs
osmos-sim/src/system/: collision.rs  epoch.rs  mod.rs  movement.rs  network.rs  sensor.rs
osmos-sim/src/tests/: object_test.rs  simulator_test.rs  statistics_test.rs
osmos-sim/src/tests/ga/: gene_test.rs
osmos-sim/tests/: object_test.rs  sensor_test.rs  simulator_test.rs  statistics_test.rs
osmos-sim/tests/system/: sensor.rs
osmos-wasm/: Cargo.toml  cargo_watch.bat  wasm_pack_build.sh
osmos-wasm/src/: lib.rs
osmos-web/: counter.js  index.html  main.js  package-lock.json  package.json  style.css  tsconfig.json  vite.config.js  vite.config.ts
osmos-web/src/: App.tsx  index.css  index.tsx
